--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.21.0",
     "@mantine/core": "^7.13.4",
     "@mantine/hooks": "^7.13.4",
     "lucide": "^0.454.0",
