--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@google/generative-ai": "^0.21.0",
     "@mantine/core": "^7.13.4",
     "@mantine/hooks": "^7.13.4",
+    "@swc/core": "^1.9.1",
     "lucide": "^0.454.0",
     "lucide-react": "^0.454.0",
     "react": "^18.3.1",
